flex/flex-tests/testData/js2_highlighting/ValidateFunctionAndPackageName.js2
package <error>aaa</error> {
  public function <error>XXX</error>() {}
  public function <error descr="More than one externally visible symbol defined in file">ValidateFunctionAndPackageName</error>() {}
}